--- a/functions/header.html
+++ b/functions/header.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>YallaNotlob</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/main.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/bootstrap.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/custom.sass">
-    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/_variables.scss">
+    <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/bootstrap.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/custom.sass">
+    <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/_variables.scss">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -22,11 +22,9 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="./Assets/JS/main.js"></script>
-    <script src="./Assets/JS/notification.js"></script>
+    <script src="../Assets/JS/main.js"></script>
+    <script src="../Assets/JS/notification.js"></script>
 </head>
-
-<body>
 
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -96,6 +94,3 @@
     </nav>
 
 </header>
-</body>
-
-</html>
