--- a/functions/header.html
+++ b/functions/header.html
@@ -50,7 +50,7 @@
             <ul class="notifit">
                 <li id="noti_Container">
                     <div id="noti_Counter"></div>
-                    <!--SHOW NOTIFICATIONS COUNT.-->
+                    <!--SHOW NOTIFICATIONS COUNT NUMBER.-->
 
                     <!--A CIRCLE LIKE BUTTON TO DISPLAY NOTIFICATION DROPDOWN.-->
                     <div id="noti_Button"></div>
