friends and orders

--- a/pages/Orders.html
+++ b/pages/Orders.html
@@ -94,9 +94,8 @@
             </nav>
         </header>
 
-
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
+        <div class="container col-md-5 ">
+            <div class="jumbotron bondBox">
                 <div class="table-wrapper">
                     <div class="table-title">
                         <div class="row">
