--- a/pages/friends.html
+++ b/pages/friends.html
@@ -26,7 +26,6 @@
     <title>Friends List</title>
 </head>
 <body>
-
     <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <a class="navbar-brand" href="#">Yalla-Notlob</a>
@@ -92,6 +91,69 @@
             </nav>
         </header>
     
+        <form class="form-inline">
+            <div class="form-group">
+                    <label for="friendName">Your Friend Name</label>
+                    <input type="text" class="form-control" id="friendName"
+                        placeholder="Enter new friend name...">
+                </div>
+            <button type="submit" class="btn btn-primary">Add</button>
+        </form>
+
+        <div class="col-lg-8">
+            <div class="panel panel-primary">
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="thumbnail">
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <img src="http://rs775.pbsrc.com/albums/yy35/PhoenyxStar/link-1.jpg~c200"
+                                                class="media-object" style="width:60px">
+                                        </div>
+                                        <div class="media-body">
+                                            <h4 class="media-heading"><a href="">Gomaa</a></h4>
+                                            <button type="submit" class="btn btn-primary">Remove</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-6">
+                                <div class="thumbnail">
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <img src="http://rs775.pbsrc.com/albums/yy35/PhoenyxStar/link-1.jpg~c200"
+                                                class="media-object" style="width:60px">
+                                        </div>
+                                        <div class="media-body">
+                                            <h4 class="media-heading"><a href="">Ahmed</a></h4>
+                                            <button type="submit" class="btn btn-primary">Remove</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-6">
+                                <div class="thumbnail">
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <img src="http://rs775.pbsrc.com/albums/yy35/PhoenyxStar/link-1.jpg~c200"
+                                                class="media-object" style="width:60px">
+                                        </div>
+                                        <div class="media-body">
+                                            <h4 class="media-heading"><a href="">Hassan</a></h4>
+                                            <button type="submit" class="btn btn-primary">Remove</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
     
 </body>
