--- a/pages/signup.html
+++ b/pages/signup.html
@@ -64,8 +64,7 @@
                     required="required">
             </div>
             <div class="form-group">
-                <input type="email" class="form-control input-lg" name="email" placeholder="Email"
-                    required="required">
+                <input type="email" class="form-control input-lg" name="email" placeholder="Email" required="required">
             </div>
             <div class="form-group">
                 <input type="password" class="form-control input-lg" name="password" placeholder="Password"
