--- a/pages/groups.html
+++ b/pages/groups.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Groups</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
+    
     <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/bootstrap.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/custom.sass">
@@ -29,8 +27,12 @@
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="../Assets/JS/main.js"></script>
     <script src="../Assets/JS/notification.js"></script>
-</head>
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css"
+        integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
 
+</head>
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
@@ -129,7 +131,7 @@
                             <input type="text" class="form-control bondBox search" id="groupName2"
                                 placeholder="Enter group name...">
                         </div>
-                        <button type="button" class="btn btn-primary bondBox">Add</button>
+                        <button type="button" class="btn btn-primary bondBox" onclick="addGroup(this.value)">Add</button>
                     </form>
                 </div>
             </div>
