linking add group + listing all groups

--- a/pages/groups.html
+++ b/pages/groups.html
@@ -149,8 +149,15 @@
                     <div class="panel-body">
                         <ul class="list-group" id="groupList">
                             <script>
-                                let groups = [{ name: "ITI", id: 1 }, { name: "G2", id: 2 }];// Groups and ids fetched from the api
-                                groups.forEach(addGroupToHtml);
+                                //let groups = [{ name: "ITI", id: 1 }, { name: "G2", id: 2 }];// Groups and ids fetched from the api
+                                fetch('https://yallanotlobapi.herokuapp.com/users/1/groups')
+                                    .then(function(response) {
+                                        return response.json();
+                                    })
+                                    .then(function(groups) {
+                                        groups.forEach(addGroupToHtml);
+                                    });
+                                
                             </script>
                         </ul>
                     </div>
