--- a/pages/signup.html
+++ b/pages/signup.html
@@ -22,7 +22,7 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="../Assets/JS/main.js"></script>
+    <!-- <script src="../Assets/JS/main.js"></script> -->
     <script src="../Assets/JS/notification.js"></script>
 </head>
 
@@ -56,32 +56,62 @@
 <section>
 
     <div class="signin-form">
-        <form action="" method="post">
+        <!-- <form action="" method="post" id="register-form"> -->
             <h2>Sign Up</h2>
             <div class="or-seperator"></div>
             <div class="form-group">
-                <input type="text" class="form-control input-lg" name="username" placeholder="Username"
+                <input type="text" class="form-control input-lg" name="username" id="username" placeholder="Username"
                     required="required">
             </div>
             <div class="form-group">
-                <input type="email" class="form-control input-lg" name="email" placeholder="Email" required="required">
+                <input type="email" class="form-control input-lg" name="email" id="email" placeholder="Email" required="required">
             </div>
             <div class="form-group">
-                <input type="password" class="form-control input-lg" name="password" placeholder="Password"
+                <input type="password" class="form-control input-lg" name="password" id="password" placeholder="Password"
                     required="required">
             </div>
             <div class="form-group">
-                <input type="password" class="form-control input-lg" name="conPassword" placeholder="Confirm Password"
+                <input type="password" class="form-control input-lg" name="conPassword" id="conPassword" placeholder="Confirm Password"
                     required="required">
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-success btn-lg btn-block signup-btn">Sign Up</button>
+                <button type="submit" id="submit_btn" class="btn btn-success btn-lg btn-block signup-btn">Sign Up</button>
             </div>
             <div class="text-center small">Already have an account? <a href="login.html">LogIn</a></div>
 
-        </form>
+        <!-- </form> -->
     </div>
 </section>
+
+<script>
+$('document').ready(function(){
+
+    $('#submit_btn').click(function(e){
+    e.preventDefault();
+    var data = {};
+    data.name = $('#username').val();
+    data.email = $('#email').val();
+    data.password = $('#password').val();
+    data.avatar = '';
+
+    let dataJSON = JSON.stringify(data)
+
+    jQuery.ajax({
+            type: "POST",
+            url: "http://localhost:3000/users",
+            data: dataJSON,
+            // dataType: "application/json",
+            contentType: "application/json",
+            cache: false,
+            success: function(response){
+                console.log(response)
+                alert("You have Registered as : " + response);
+            }
+
+        });
+    });
+    });
+</script>
 </body>
 
 </html>
