--- a/pages/signup.html
+++ b/pages/signup.html
@@ -56,62 +56,37 @@
 <section>
 
     <div class="signin-form">
-        <!-- <form action="" method="post" id="register-form"> -->
+        <form>
             <h2>Sign Up</h2>
+            <div id="alert"></div>
             <div class="or-seperator"></div>
             <div class="form-group">
                 <input type="text" class="form-control input-lg" name="username" id="username" placeholder="Username"
                     required="required">
             </div>
             <div class="form-group">
-                <input type="email" class="form-control input-lg" name="email" id="email" placeholder="Email" required="required">
-            </div>
-            <div class="form-group">
-                <input type="password" class="form-control input-lg" name="password" id="password" placeholder="Password"
+                <input type="email" class="form-control input-lg" name="email" id="email" placeholder="Email"
                     required="required">
             </div>
             <div class="form-group">
-                <input type="password" class="form-control input-lg" name="conPassword" id="conPassword" placeholder="Confirm Password"
-                    required="required">
+                <input type="password" class="form-control input-lg" name="password" id="password"
+                    placeholder="Password" required="required">
             </div>
             <div class="form-group">
-                <button type="submit" id="submit_btn" class="btn btn-success btn-lg btn-block signup-btn">Sign Up</button>
+                <input type="password" class="form-control input-lg" name="conPassword" id="conPassword"
+                    placeholder="Confirm Password" required="required">
+            </div>
+            <div class="form-group">
+                <button type="button" id="submit_btn" class="btn btn-success btn-lg btn-block signup-btn">Sign
+                    Up</button>
             </div>
             <div class="text-center small">Already have an account? <a href="login.html">LogIn</a></div>
 
-        <!-- </form> -->
+        </form>
     </div>
 </section>
 
-<script>
-$('document').ready(function(){
-
-    $('#submit_btn').click(function(e){
-    e.preventDefault();
-    var data = {};
-    data.name = $('#username').val();
-    data.email = $('#email').val();
-    data.password = $('#password').val();
-    data.avatar = '';
-
-    let dataJSON = JSON.stringify(data)
-
-    jQuery.ajax({
-            type: "POST",
-            url: "http://localhost:3000/users",
-            data: dataJSON,
-            // dataType: "application/json",
-            contentType: "application/json",
-            cache: false,
-            success: function(response){
-                console.log(response)
-                alert("You have Registered as : " + response);
-            }
-
-        });
-    });
-    });
-</script>
+<script src="../Assets/JS/signup.js"></script>
 </body>
 
 </html>
