--- a/pages/login.html
+++ b/pages/login.html
@@ -22,7 +22,7 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="../Assets/JS/main.js"></script>
+    <!-- <script src="../Assets/JS/main.js"></script> -->
     
     <script src="../Assets/JS/notification.js"></script>
 </head>
@@ -57,24 +57,28 @@
 <section>
 
     <div class="signin-form">
-        <form action="" method="post">
+        <form>
             <h2>Sign in</h2>
+            <div id="alert"></div>
+
             <p class="hint-text">Sign in with your social media account</p>
             <div class="social-btn text-center">
-                <a href="#" class="btn btn-primary btn-lg" title="Facebook"><i class="fa fa-facebook"></i></a>
+                
+                <a href="#" class="btn btn-primary btn-lg" title="Facebook"><i class="fa fa-facebook" style="color:white;"></i></a>
                 <a href="#" class="btn btn-danger btn-lg" title="Google"><i class="fa fa-google"></i></a>
             </div>
             <div class="or-seperator"><b>or</b></div>
+
             <div class="form-group">
-                <input type="text" class="form-control input-lg" name="username" placeholder="Username"
+                <input type="email" class="form-control input-lg" name="email" id="email" placeholder="Enter Your E-mail"
                     required="required">
             </div>
             <div class="form-group">
-                <input type="password" class="form-control input-lg" name="password" placeholder="Password"
+                <input type="password" class="form-control input-lg" name="password" id="password" placeholder="Password"
                     required="required">
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-success btn-lg btn-block signup-btn">Sign in</button>
+                <button type="button" id="login_btn" class="btn btn-success btn-lg btn-block signup-btn">Sign in</button>
             </div>
             <div class="text-center small"><a href="#">Forgot Your password?</a></div>
             <div class="or-seperator"></div>
@@ -84,6 +88,8 @@
         </form>
     </div>
 </section>
+
+<script src="../Assets/JS/login.js"></script>
 </body>
 
 </html>
